# nonebot_plugin_simulator_xiuxian

./: README.md  pyproject.toml
data/xiuxian/: xiuxian_version.txt  境界.json  灵根.json
data/xiuxian/work/: 镇妖.json
data/xiuxian/功法/: 主功法.json  神通.json
data/xiuxian/装备/: 法器.json  防具.json
nonebot_plugin_simulator_xiuxian/: LICENSE  README.md  __init__.py  config.py  help.py  requirements.txt  xiuxian2_handle.py  xiuxian_config.py  xiuxian_xiazaishuju.py
nonebot_plugin_simulator_xiuxian/xiuxian/: __init__.py  xiuxian_xiazaishuju.py
nonebot_plugin_simulator_xiuxian/xiuxian/xiuxian_buff/: __init__.py
nonebot_plugin_simulator_xiuxian/xiuxian/xiuxian_info/: __init__.py
nonebot_plugin_simulator_xiuxian/xiuxian/xiuxian_rift/: riftmake.py
nonebot_plugin_simulator_xiuxian/xiuxian_back/: config.json
nonebot_plugin_simulator_xiuxian/xiuxian_base/: __init__.py  help.py
nonebot_plugin_simulator_xiuxian/xiuxian_boss/: config.json
nonebot_plugin_simulator_xiuxian/xiuxian_info/: __init__.py  config.json  draw_user_info.py
nonebot_plugin_simulator_xiuxian/xiuxian_rift/: __init__.py
nonebot_plugin_xiuxian/: __init__.py  pyproject.toml  xiuxian_config.py
nonebot_plugin_xiuxian/xiuxian_bank/: config.json
nonebot_plugin_xiuxian/xiuxian_boss/: __init__.py
