[project]
name = "nonebot_plugin_simulator_xiuxian"
description = "基于nonebot2的修仙文游"
version = "1.1"
authors = [
    {name = "甘城菜月", email = "2859385794@qq.com"},
]
readme = "README.md"
license = {text = "GPL-3"}
requires-python = ">=3.10"
dependencies = [
    "nonebot2",
    "nonebot-adapter-onebot",
    "nonebot-plugin-apscheduler"
    "Pillow==9.5.0",
    "nonebot-plugin-apscheduler",
    "pydantic",
    "wget",
    "wcwidth",
    "ujson"
]



[project.urls]
Homepage = "https://github.com/luoyefufeng/nonebot_plugin_simulator_xiuxian"


[build-system]
requires = [
  "setuptools >= 67.4.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_simulator_xiuxian*"]
