[project]
name = "nonebot_plugin_simulator_xiuxian"
description = "基于nonebot2的修仙文游"
version = "1.1"
authors = [
    {name = "甘城菜月", email = "2859385794@qq.com"},
]
readme = "README.md"
license = {text = "GPL-3"}
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.2.3",
    "nonebot-plugin-apscheduler>=0.2.0"
    "Pillow==9.5.0",
    "nonebot-plugin-apscheduler>=0.4.0",
    "pydantic>=2.5.0",
    "wget>=3.2.0",
    "wcwidth>=0.2.13",
    "ujson>=5.9.0"
]



[project.urls]
Homepage = "https://github.com/luoyefufeng/nonebot_plugin_simulator_xiuxian"


[build-system]
requires = [
  "setuptools >= 67.4.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_simulator_xiuxian*"]
